--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name test.hu www.test.hu;
+        server_name test.hu www.test.hu localhost 127.0.0.1:80;
 
         index index.php index.html index.htm;
 
