--- a/wp/Dockerfile
+++ b/wp/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /var/www/html
 
 COPY upload/plugin/ /var/www/html/wp-content/plugins/
 
+COPY wp-config-docker.php /usr/src/wordpress/
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["php-fpm"]
